Enhance interview scheduling by including student roll numbers and fix item card handling in the shopping process